# mitten

./: Dockerfile  docker-compose.yml
.Trash-0/info/: langchain_docs_rag.ipynb.trashinfo
.ipynb_checkpoints/: pyproject-checkpoint.toml
w1/: .gitignore  class2.ipynb  class2_example.py
w1/.ipynb_checkpoints/: class2-checkpoint.ipynb  customer_feedback-checkpoint.txt  pyproject-checkpoint.toml  simple_chat_history-checkpoint.py
w2/: Dockerfile  RAG.ipynb  RAG_FUSION_101.ipynb  Untitled.ipynb  langchain_docs_rag.ipynb  pyproject.toml  read_the_docs.ipynb
w2/.ipynb_checkpoints/: RAG-checkpoint.ipynb  RAG_FUSION_101-checkpoint.ipynb  read_the_docs-checkpoint.ipynb
w2/rtdocs/python.langchain.com/en/latest/: index.html
w3/: Untitled.ipynb  a_gentleman.ipynb  quadratic_solver.ipynb  tool_calling_agent.ipynb  tools.py
w3/.ipynb_checkpoints/: __init__-checkpoint.py  a_gentleman-checkpoint.ipynb  quadratic_solver-checkpoint.ipynb  tool_calling_agent-checkpoint.ipynb  tools-checkpoint.py
