[tool.poetry]
name = "week2"
version = "0.1.0"
description = ""
authors = ["jaehyon <134814180+bananasplit333@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.11"
jupyter = "^1.1.1"
notebook = "^7.4.7"
pinecone = "^7.3.0"
pydantic = "^2.7.4"
numpy = "^1.26.4"
pinecone-client = "^4.0.0"
langchain-pinecone = "^0.2.12"
langchain-core = "<1.0.0"
langchain = "<2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
